finish layout for my country

--- a/Alert/app/src/main/res/layout/risk_hazard_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_hazard_item_view.xml
@@ -19,11 +19,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@mipmap/ic_launcher"/>
+
     </FrameLayout>
 
     <TextView
         android:id="@+id/tvHazardName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:textColor="@android:color/black"
