--- a/Alert/app/src/main/res/layout/activity_programme_results.xml
+++ b/Alert/app/src/main/res/layout/activity_programme_results.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:descendantFocusability="beforeDescendants"
         android:focusableInTouchMode="true"
         android:id="@+id/linearLayout"
@@ -22,23 +22,70 @@
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize" />
 
-        <TextView
-            android:textStyle="bold"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:id="@+id/tvResultsFor"
-            android:text="@string/results_for"
+        <android.support.v4.widget.NestedScrollView
+            android:layout_below="@+id/toolbar_layout"
+            android:id="@+id/scroller"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
 
-        <android.support.v7.widget.RecyclerView
-            android:paddingBottom="60dp"
-            android:id="@+id/rvFields"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textStyle="bold"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:id="@+id/tvResultsFor"
+                    android:text="@string/results_for"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:paddingBottom="30dp"
+                    android:clipToPadding="false"
+                    android:id="@+id/rvFields"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+<!--must be at the bottom-->
+        <android.support.v7.widget.CardView
+            android:layout_below="@+id/toolbar_layout"
+            android:background="@android:color/transparent"
+            app:cardCornerRadius="0dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation="0dp"
+            android:id="@+id/revealCon"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content">
+            <io.codetail.widget.RevealLinearLayout
+                android:orientation="vertical"
+                android:id="@+id/revealContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </LinearLayout>
+                <!-- parent RevealLinearLayout needed for pre-lollipop support-->
+                <android.support.v7.widget.CardView
+                    app:cardCornerRadius="0dp"
+                    android:visibility="invisible"
+                    android:id="@+id/cvReveal"
+                    app:cardElevation="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <include
+                        layout="@layout/reveal_menu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </android.support.v7.widget.CardView>
+            </io.codetail.widget.RevealLinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
