--- a/Alert/app/src/main/res/values/styles.xml
+++ b/Alert/app/src/main/res/values/styles.xml
@@ -35,5 +35,10 @@
         <!--<item name="android:background">#B0BEC5</item>-->
     </style>
 
+    <style name="checkBoxStyle" parent="Base.Theme.AppCompat">
+        <item name="colorAccent">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
 </resources>
 
