--- a/Alert/app/src/main/res/layout/fragment_action_expired.xml
+++ b/Alert/app/src/main/res/layout/fragment_action_expired.xml
@@ -41,21 +41,21 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:padding="5dp">
 
                     <ImageView
                         android:id="@+id/imgExpired"
-                        android:layout_width="13dp"
+                        android:layout_width="16dp"
                         android:layout_height="16dp"
-                        android:paddingTop="4dp"
-                        app:srcCompat="@drawable/alert_red_icon" />
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/ic_close_round" />
 
                     <TextView
                         android:id="@+id/tvExpired"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
+                        android:layout_gravity="center_vertical"
                         android:paddingLeft="9dp"
                         android:text="Expired"
                         android:textAppearance="?android:attr/textAppearanceSmall"
