--- a/Alert/app/src/main/res/layout/item_view_indicator_log.xml
+++ b/Alert/app/src/main/res/layout/item_view_indicator_log.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/llLogItem"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="10dp"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llLogItem"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <FrameLayout
         android:id="@+id/flMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tvLogWriterName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:textStyle="bold"
             android:layout_gravity="center_vertical"
             android:textColor="@android:color/black"
-            tools:text="Andrew Collodel"/>
+            android:textSize="13sp"
+            android:textStyle="bold"
+            tools:text="Andrew Collodel" />
+
         <ImageView
             android:id="@+id/ivLogMenu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:layout_gravity="end|center_vertical"
-            android:src="@drawable/ic_more_horiz_black_24dp"/>
+            android:src="@drawable/ic_more_horiz_black_24dp"
+            android:visibility="gone" />
     </FrameLayout>
 
     <TextView
@@ -35,7 +37,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/log_content"
         android:textSize="13sp"
-        tools:text="asd asdasdas dasdasd asdasdas asdasd asdasdasdas dsadasd asd asadasd adad adasd asd asd asd asdsadsda sad asdasdadasdad"/>
+        tools:text="asd asdasdas dasdasd asdasdas asdasd asdasdasdas dsadasd asd asadasd adad adasd asd asd asd asdsadsda sad asdasdadasdad" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,25 +49,25 @@
             android:id="@+id/tvLogDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:layout_gravity="center_vertical"
-            android:textSize="12sp"
             android:textColor="@color/grey_title"
-            tools:text="18 May 2018"/>
+            android:textSize="12sp"
+            tools:text="18 May 2018" />
 
         <TextView
             android:id="@+id/tvLogStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
-            android:textSize="12sp"
-            android:textColor="@color/grey_title"
-            android:text="@string/status"
+            android:drawableEnd="@drawable/green_dot"
             android:drawablePadding="2dp"
             android:drawableRight="@drawable/green_dot"
-            android:drawableEnd="@drawable/green_dot"/>
+            android:gravity="center_vertical"
+            android:text="@string/status"
+            android:textColor="@color/grey_title"
+            android:textSize="12sp" />
 
     </LinearLayout>
 </LinearLayout>
