--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -19,11 +19,41 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:background="@color/divider_color_lighter"
+                android:textColor="@color/grey_title"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:text="@string/network"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
+                android:background="@color/divider_color_lighter"
+                android:id="@+id/rvNetworkAlerts"
+                android:paddingTop="@dimen/activity_vertical_margin_half"
+                android:paddingBottom="@dimen/activity_vertical_margin_half"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_horizontal_margin_half"
+                android:background="@color/divider_color_lighter"
+                android:textColor="@color/grey_title"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:text="@string/country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
             <android.support.v7.widget.RecyclerView
                 android:visibility="gone"
                 android:background="@color/divider_color_lighter"
                 android:id="@+id/alert_list_view"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="@dimen/activity_vertical_margin_half"
                 android:paddingBottom="@dimen/activity_vertical_margin_half"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
