--- a/Alert/app/src/main/res/layout/content_advanced.xml
+++ b/Alert/app/src/main/res/layout/content_advanced.xml
@@ -76,8 +76,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
+
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvMinAction"
+                android:id="@+id/rvAdvAction"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
