--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,8 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/networkTitle"
+                android:visibility="gone"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
@@ -39,6 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/countryTitle"
+                android:visibility="gone"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_horizontal_margin_half"
@@ -54,7 +58,7 @@
                 android:background="@color/divider_color_lighter"
                 android:id="@+id/alert_list_view"
                 android:paddingTop="@dimen/activity_vertical_margin_half"
-                android:paddingBottom="@dimen/activity_vertical_margin_half"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <View
