--- a/Alert/app/src/main/res/layout/activity_programme_results.xml
+++ b/Alert/app/src/main/res/layout/activity_programme_results.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
+            <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -42,14 +42,24 @@
                     android:text="@string/results_for"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
-
+                <TextView
+                    android:layout_below="@+id/tvResultsFor"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:text="@string/no_programmes"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
                 <android.support.v7.widget.RecyclerView
+                    android:layout_below="@+id/tvResultsFor"
                     android:paddingBottom="30dp"
                     android:clipToPadding="false"
                     android:id="@+id/rvFields"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
-            </LinearLayout>
+            </RelativeLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
