--- a/Alert/app/src/main/res/layout/adapter_alert.xml
+++ b/Alert/app/src/main/res/layout/adapter_alert.xml
@@ -26,8 +26,9 @@
 
             <ImageView
                 android:id="@+id/img_alert_colour"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="64dp"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/textViewAlertReq"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/amber_alert_left" />
@@ -35,14 +36,16 @@
             <TextView
                 android:id="@+id/txt_alert_level"
                 android:layout_width="48dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Amber Alert"
+                android:gravity="center_vertical"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/img_alert_colour"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -71,17 +74,24 @@
 
             <TextView
                 android:id="@+id/txt_num_of_people"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="11dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="2dp"
+                android:paddingBottom="4dp"
                 android:text="Number of people affected"
+                android:maxLines="3"
+                android:singleLine="false"
+                android:scrollHorizontally="false"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/img_hazard_icon"
                 app:layout_constraintTop_toBottomOf="@+id/txt_hazard_name"
-                android:layout_marginLeft="11dp" />
+                android:layout_marginRight="12dp"
+                android:layout_marginLeft="12dp" />
 
             <TextView
-                app:layout_constraintTop_toBottomOf="@+id/img_alert_colour"
+                app:layout_constraintTop_toBottomOf="@+id/txt_num_of_people"
                 android:background="@color/alertRed"
                 android:visibility="gone"
                 android:id="@+id/textViewAlertReq"
