--- a/Alert/app/src/main/res/layout/dialog_users_list.xml
+++ b/Alert/app/src/main/res/layout/dialog_users_list.xml
@@ -3,6 +3,16 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin_one_and_a_half"
+        android:paddingTop="@dimen/activity_horizontal_margin_one_and_a_half"
+        android:text="Assign to"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="@dimen/activity_horizontal_margin_one_and_a_half"
         android:layout_marginRight="@dimen/activity_horizontal_margin_one_and_a_half"
