--- a/Alert/app/src/main/res/layout/fragment_my_country.xml
+++ b/Alert/app/src/main/res/layout/fragment_my_country.xml
@@ -32,6 +32,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_marginTop="@dimen/double_margin"
+        android:layout_below="@+id/countryPickerLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/btnSearch"
         style="@style/Widget.AppCompat.Button.Borderless"
