--- a/Alert/app/src/main/res/layout/activity_complete_action.xml
+++ b/Alert/app/src/main/res/layout/activity_complete_action.xml
@@ -29,17 +29,18 @@
             android:id="@+id/etCompletionNote"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:layout_marginBottom="100dp"
             android:layout_marginLeft="@dimen/space_16"
             android:layout_marginRight="@dimen/space_16"
-            android:layout_marginTop="@dimen/space_16"
+            android:layout_marginTop="@dimen/space_20"
             android:backgroundTint="@android:color/transparent"
             android:ems="10"
+            android:gravity="left|top"
             android:hint="@string/txt_completion_note"
             android:inputType="text|textMultiLine|textCapSentences"
             android:lines="2"
             android:maxLines="4"
             android:minLines="2"
+            android:padding="0dp"
             android:scrollbars="vertical"
             android:singleLine="false" />
 
