--- a/Alert/app/src/main/res/layout/activity_create_apa.xml
+++ b/Alert/app/src/main/res/layout/activity_create_apa.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context="org.alertpreparedness.platform.alert.adv_preparedness.activity.CreateAPAActivity">
 
+    <include
+        android:id="@+id/create_apa_layout"
+        layout="@layout/content_create_apa"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.636" />
+
 </android.support.constraint.ConstraintLayout>
