--- a/Alert/app/src/main/res/layout/content_minimum.xml
+++ b/Alert/app/src/main/res/layout/content_minimum.xml
@@ -46,9 +46,9 @@
 
                     <ImageView
                         android:id="@+id/imgStatus"
-                        android:layout_gravity="center_vertical"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
+                        android:layout_gravity="center_vertical"
                         app:srcCompat="@drawable/ic_in_progress" />
 
                     <TextView
@@ -87,6 +87,22 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/vDivider" />
+
+            <TextView
+                android:id="@+id/tvNoAction"
+                android:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="No Actions"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
 
         </android.support.constraint.ConstraintLayout>
 
