--- a/Alert/app/src/main/res/values/dimens.xml
+++ b/Alert/app/src/main/res/values/dimens.xml
@@ -18,4 +18,7 @@
     <dimen name="double_margin">32dp</dimen>
     <dimen name="space_16">16dp</dimen>
     <dimen name="space_275">275dp</dimen>
+    <dimen name="space_20">20dp</dimen>
+    <dimen name="space_42">42dp</dimen>
+    <dimen name="space_56">56dp</dimen>
 </resources>
