--- a/Alert/app/src/main/res/values/styles.xml
+++ b/Alert/app/src/main/res/values/styles.xml
@@ -40,5 +40,11 @@
         <item name="android:textColorSecondary">@color/white</item>
     </style>
 
+    <style name="MyMenu">
+        <item name="android:textSize">17sp</item> //size desired.
+        <item name="android:textColor">@color/white</item> //font color
+        <item name="android:background">@color/colorAccent</item> //background
+    </style>
+
 </resources>
 
