--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -77,8 +77,55 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 tools:ignore="RtlHardcoded" />
 
+            <TextView
+                android:visibility="visible"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_horizontal_margin_half"
+                android:background="@android:color/transparent"
+                android:textColor="@color/grey_title"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:text="@string/country"
+                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/tasks_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:visibility="visible"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_horizontal_margin_half"
+                android:background="@color/divider_color_lighter"
+                android:textColor="@color/grey_title"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:text="@string/network"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <android.support.v7.widget.RecyclerView
+                android:visibility="gone"
+                android:layout_marginTop="@dimen/activity_vertical_margin_half"
+                android:id="@+id/network_tasks"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/noNetworkTasks"
+                android:visibility="visible"
+                android:background="@color/divider_color_lighter"
+                android:paddingTop="@dimen/activity_vertical_margin_half"
+                android:padding="@dimen/activity_vertical_margin"
+                android:textColor="@color/grey_title"
+                android:textSize="14sp"
+                android:textAlignment="center"
+                android:text="@string/no_network_tasks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
