--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/divider_color"/>
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
@@ -78,6 +79,7 @@
                 tools:ignore="RtlHardcoded" />
 
             <TextView
+                android:id="@+id/countryTasks"
                 android:visibility="visible"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -97,6 +99,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/networkTasks"
                 android:visibility="visible"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -142,18 +145,34 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:background="@color/white"
-            android:id="@+id/tvMyTasksPinned"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:gravity="left"
-            android:text="@string/my_tasks"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            tools:ignore="RtlHardcoded" />
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_alignParentLeft="true"
+                android:background="@color/white"
+                android:id="@+id/tvMyTasksPinned"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:gravity="left"
+                android:text="@string/my_tasks"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                tools:ignore="RtlHardcoded" />
+            <TextView
+                android:visibility="gone"
+                android:textColor="@color/grey_title"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:id="@+id/taskTypeTitle"
+                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
