--- a/Alert/app/src/main/res/layout/fragment_home.xml
+++ b/Alert/app/src/main/res/layout/fragment_home.xml
@@ -104,6 +104,7 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_horizontal_margin_half"
+                android:paddingBottom="@dimen/activity_vertical_margin_half"
                 android:background="@color/divider_color_lighter"
                 android:textColor="@color/grey_title"
                 android:textStyle="bold"
@@ -114,6 +115,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:visibility="gone"
+                android:layout_marginBottom="@dimen/activity_vertical_margin_half"
                 android:layout_marginTop="@dimen/activity_vertical_margin_half"
                 android:id="@+id/network_tasks"
                 android:layout_width="match_parent"
@@ -123,7 +125,6 @@
                 android:id="@+id/noNetworkTasks"
                 android:visibility="visible"
                 android:background="@color/divider_color_lighter"
-                android:paddingTop="@dimen/activity_vertical_margin_half"
                 android:padding="@dimen/activity_vertical_margin"
                 android:textColor="@color/grey_title"
                 android:textSize="14sp"
