--- a/Alert/app/src/main/res/layout/content_minimum.xml
+++ b/Alert/app/src/main/res/layout/content_minimum.xml
@@ -1,11 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_in_progress"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/divider_color">
-
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -13,10 +11,10 @@
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
-
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
