--- a/Alert/app/src/main/res/layout/content_advanced.xml
+++ b/Alert/app/src/main/res/layout/content_advanced.xml
@@ -13,6 +13,7 @@ android:background="@color/divider_color">
     android:layout_marginEnd="24dp"
     android:layout_marginStart="24dp"
     android:layout_marginTop="16dp"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
