--- a/Alert/app/src/main/res/layout/content_create_apa.xml
+++ b/Alert/app/src/main/res/layout/content_create_apa.xml
@@ -56,6 +56,7 @@
             android:layout_margin="@dimen/space_16"
             android:backgroundTint="@android:color/transparent"
             android:ems="10"
+            android:inputType="none"
             android:gravity="center_vertical"
             android:hint="@string/txt_hazard_association"
             android:padding="0dp"
@@ -69,12 +70,14 @@
             android:layout_marginRight="@dimen/space_16"
             android:backgroundTint="@android:color/transparent"
             android:ems="10"
+            android:inputType="none"
             android:gravity="center_vertical"
             android:hint="@string/txt_department"
             android:padding="0dp"
             android:focusable="false"/>
 
         <EditText
+            android:inputType="none"
             android:id="@+id/etAssignTo"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -97,7 +100,7 @@
             android:ems="10"
             android:gravity="center_vertical"
             android:hint="@string/txt_budget"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="0dp" />
 
         <LinearLayout
@@ -115,23 +118,31 @@
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
-            <RadioButton
-                android:id="@+id/rbtYesDoc"
+            <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/space_16"
-                android:layout_marginTop="@dimen/space_16"
-                android:ems="10"
-                android:text="Yes" />
+                android:id="@+id/myRadioGroup"
+                android:checkedButton="@+id/rbtNoDoc" >
 
-            <RadioButton
-                android:id="@+id/rbtNoDoc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/space_16"
-                android:layout_marginTop="@dimen/space_16"
-                android:ems="10"
-                android:text="No" />
+                <RadioButton
+                    android:id="@+id/rbtYesDoc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/space_16"
+                    android:layout_marginTop="@dimen/space_16"
+                    android:ems="10"
+                    android:text="Yes" />
+
+                <RadioButton
+                    android:id="@+id/rbtNoDoc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/space_16"
+                    android:layout_marginTop="@dimen/space_16"
+                    android:ems="10"
+                    android:text="No" />
+            </RadioGroup>
+
 
         </LinearLayout>
     </LinearLayout>
