Indicator, MPA, APA notifications work

--- a/Alert/app/src/main/res/values/styles.xml
+++ b/Alert/app/src/main/res/values/styles.xml
@@ -46,5 +46,9 @@
         <item name="android:background">@color/colorAccent</item> //background
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
 </resources>
 
