fix a bunch of bugs for APA/MPA

--- a/Alert/app/src/main/res/layout/adapter_minimum_actions.xml
+++ b/Alert/app/src/main/res/layout/adapter_minimum_actions.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_action_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="11dp"
         android:text="Custom action"
         android:textColor="@android:color/darker_gray"
@@ -21,7 +21,7 @@
         android:id="@+id/tv_due_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="12dp"
         android:text="Expires: "
         android:textColor="@android:color/darker_gray"
@@ -33,22 +33,22 @@
         android:id="@+id/tv_action_name"
         android:layout_width="352dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:textColor="@android:color/black"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_action_type"
-        tools:text="Donec facilisis tortor ut augue lacinia, at viverra est semper. Sed sapien metus, scelerisque nec pharetra id, tempor a tortor. Pellentesque non dignissim neque. Ut porta viverra est, ut dignissim elit elementum ut. Nunc vel rhoncus nibh, ut tincidunt turpis. Integer ac enim pellentesque, adipiscing metus id." />
+        tools:text="" />
 
     <TextView
         android:id="@+id/tv_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="Andrew Collodel, HR"
+        android:text=""
         android:textColor="@color/btnColor"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/tv_budget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="4dp"
         android:background="@drawable/gray_rounded"
         android:padding="2dp"
