--- a/Alert/app/src/main/res/layout/adapter_minimum_actions.xml
+++ b/Alert/app/src/main/res/layout/adapter_minimum_actions.xml
@@ -46,7 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="8dp"
         android:text=""
         android:textColor="@color/btnColor"
@@ -63,7 +64,6 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/gray_rounded"
         android:padding="2dp"
-        android:text="$0"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
