--- a/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
+++ b/Alert/app/src/main/res/layout/risk_indicator_item_view.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/llRiskIndicator"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:padding="10dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin_half"
+    android:paddingBottom="@dimen/activity_vertical_margin_half">
 
     <TextView
         android:layout_margin="@dimen/activity_vertical_margin"
-        android:textColor="@android:color/black"
+        android:textColor="@color/grey_title"
         android:visibility="gone"
         android:id="@+id/empty_message"
         android:text="@string/no_indicators"
@@ -45,8 +48,7 @@
                 android:gravity="end"
                 android:textColor="@color/grey_title"
                 android:textSize="12sp"
-                android:visibility="gone"
-                tools:text="Network Name"/>
+                android:visibility="gone" />
         </LinearLayout>
 
         <TextView
@@ -55,12 +57,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:textColor="@android:color/black"
-            android:textSize="13sp"
-            tools:text="Trends in manufaction"/>
+            android:layout_marginTop="2dp"
+            android:textSize="13sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
+            android:layout_marginTop="@dimen/activity_vertical_margin_half"
+            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
             android:orientation="horizontal">
 
             <TextView
@@ -72,8 +76,7 @@
                 android:gravity="center_vertical"
                 android:padding="10dp"
                 android:textColor="@android:color/white"
-                android:textSize="13sp"
-                tools:text="Potential challenges n risk"/>
+                android:textSize="13sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
