--- a/Alert/app/src/main/res/menu/menu_archived.xml
+++ b/Alert/app/src/main/res/menu/menu_archived.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/edit"
+            android:icon="@drawable/ic_edit_gray_24px"
+            android:title="@string/edit" />
         <!--<item-->
             <!--android:id="@+id/reactive_action"-->
             <!--android:icon="@drawable/ic_check_circle_24px"-->
