--- a/Alert/app/src/main/res/menu/menu_in_progress_mpa.xml
+++ b/Alert/app/src/main/res/menu/menu_in_progress_mpa.xml
@@ -2,17 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/edit"
-            android:icon="@drawable/ic_edit_gray_24px"
-            android:title="@string/edit" />
+            android:id="@+id/complete_action"
+            android:icon="@drawable/ic_check_circle_24px"
+            android:title="@string/txt_complete_action" />
         <item
-            android:id="@+id/update_date"
-            android:icon="@drawable/ic_date_24px"
-            android:title="@string/txt_update_due_date" />
-        <item
-            android:id="@+id/assign_action"
+            android:id="@+id/reassign_action"
             android:icon="@drawable/ic_assignment_24px"
-            android:title="@string/txt_assign_action" />
+            android:title="@string/txt_reassign_action" />
         <item
             android:id="@+id/action_notes"
             android:icon="@drawable/ic_chat_bubble_24px"
